<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:multi_line_radio_group="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:fillViewport="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/LL_firstContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_centerHorizontal="true"
                android:elevation="@dimen/_2sdp"
                android:scaleType="centerCrop"
                app:civ_border_width="@dimen/_1sdp"
                android:visibility="gone"
                app:civ_border_color="@color/white"
                android:src="@drawable/registration"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/_10sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/usertype_txt"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <com.loksarkar.ui.MultiLineRadioGroup
                            android:id="@+id/rg_userType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            multi_line_radio_group:max_in_row="2"
                            multi_line_radio_group:default_button="Other"
                            multi_line_radio_group:radio_buttons="@array/radio_buttons_usertype" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:inputType="text"
                            android:layout_gravity="center"

                            android:paddingStart="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:imeOptions="actionNext"
                            android:hint="@string/name_hint"
                            android:paddingLeft="@dimen/_5sdp" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/input_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="start|left"
                            android:minLines="4"
                            android:background="@drawable/rounded_editext"
                            android:imeOptions="actionNext"
                            android:hint="@string/address_hint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_no"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/input_mobnum"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:hint="@string/mob_no_hint"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:editable="false"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email_label"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />


                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:imeOptions="actionNext"
                            android:editable="false"
                            android:hint="@string/email_address_hint" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dob"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />


                        <EditText
                            android:id="@+id/input_dob"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:editable="false"
                            android:clickable="true"
                            android:imeOptions="actionNext"
                            android:hint="@string/dob_hint" />

                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/LL_IdProof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp">


                        <TextView
                            android:id="@+id/tv_IdProof"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/identifiction"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"/>


                        <com.loksarkar.ui.MultiLineRadioGroup
                            android:id="@+id/rg_options"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            multi_line_radio_group:max_in_row="2"
                            multi_line_radio_group:radio_buttons="@array/radio_buttons" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/id_proof_num"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/input_Id_Proof_Num"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:imeOptions="actionNext"
                            android:editable="false"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:hint="@string/identification_hint" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/district"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/rounded_corner_layout">

                            <fr.ganfra.materialspinner.MaterialSpinner
                                android:id="@+id/spinner_district"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:ms_multiline="false"
                                app:ms_enableFloatingLabel="false"
                                app:ms_enableErrorLabel="false"
                                app:ms_floatingLabelText="@string/district_drop_down_hint"
                                app:ms_thickness="0dp"
                                app:ms_alignLabels="true" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lok_sevak_code"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/input_loksevak_code"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/rounded_editext"
                            android:imeOptions="actionNext"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:hint="@string/lok_sevak_code" />

                    </LinearLayout>




                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        style="@style/Widget.AppCompat.Button"
                        android:shadowColor="@color/btn_color"
                        android:background="@color/btn_color"
                        android:layout_gravity="center"
                        android:text="Update"
                        android:textColor="@color/white"
                        android:gravity="center"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            </android.support.v7.widget.LinearLayoutCompat>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>