<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/_5sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                android:layout_gravity="center"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rounded_editext"
                android:layout_margin="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:imeOptions="actionNext"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/userid"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_pswd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/rounded_editext"
                android:paddingStart="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                app:passwordToggleEnabled="true"
                android:hint="@string/password"/>


                <com.loksarkar.ui.GenerateProcessButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:background="@color/btn_color"
                    android:layout_gravity="center"/>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_create_acount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/create_ac_txt" />



            </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>